# FIO_NER

./: README.md  example_manual.py  pyproject.toml  requirements.txt
src/sts_fio_mvp/: __init__.py  extractor.py  ocr.py  pipeline.py  postprocess.py  preprocess.py
