[project]
name = "sts-fio-mvp"
version = "0.1.0"
description = "MVP pipeline for OCR and BERT-based FIO extraction from Russian STS images."
requires-python = ">=3.10"
dependencies = [
    "easyocr>=1.7.1",
    "numpy>=1.24",
    "opencv-python-headless>=4.8",
    "Pillow>=10.0",
    "torch>=2.1",
    "transformers>=4.40",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
